--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,11 +6,16 @@ body {
     color: #ffffff; /* True white text */
 }
 
+.banner {
+    height: 5px;
+    background: linear-gradient(to right, #ff0000 20%, #ff8000 20% 40%, #ffff00 40% 60%, #00ff00 60% 80%, #0000ff 80%);
+}
+
 .container {
     max-width: 600px;
     margin: 30px auto;
     padding: 20px;
-    background-color: #2d2d2d; /* Dark container background */
+    background-color: #000000; /* Dark container background */
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     border-radius: 30px;
 }
